# WaveMonitor

./: .gitignore  LICENSE  README.md  monitor.py  pyproject.toml  style.qss  wave_monitor.py
.github/workflows/: python-publish.yml
assets/: style.qss
docs/: index.md
notebooks/: bench_client.ipynb  bench_client_blocking.ipynb  bench_client_multithread.ipynb  bench_encode.ipynb  data_source_test.py  simple_usage.py
src/wave_monitor/: __init__.py  client.py  constants.py  gui.py  proto.py  window.py
src/wave_monitor/assets/: style.qss  style2.qss
tests/: conftest.py  simple_usage.py  test_client.py  test_data_source.py  test_integration_shared_memory.py  test_shared_memory.py
