[project]
name = "WaveMonitor"
version = "0.0.3"
dependencies = [
    "msgpack",
    "msgpack_numpy",
    "numpy",
    "pyqtgraph",
    "PySide6",
]
requires-python = ">=3.8"
authors = [{ name = "Qiujv", email = "qiujv@outlook.com" }]
description = "A simple GUI for monitoring waveforms."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    # "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Qiujv/WaveMonitor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wave_monitor"]