[project]
name = "WaveMonitor"
dynamic = ["version"]
dependencies = [
    "msgpack",
    "msgpack_numpy",
    "numpy",
    "pyqtgraph",
    "PySide6>=6.7.0,!=6.9.1",
    "typing_extensions",
]
requires-python = ">=3.9"
authors = [{ name = "Qiujv", email = "qiujv@outlook.com" }]
description = "A simple GUI for monitoring waveforms."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    # "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Qiujv/WaveMonitor"

[project.gui-scripts]
start-wave-monitor = "wave_monitor.gui:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wave_monitor"]

[tool.hatch.version]
path = "src/wave_monitor/__about__.py"

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
