[project]
name = "WaveMonitor"
dynamic = ["version"]
dependencies = [
    "msgpack>=0.4.0",
    "msgpack_numpy",
    "numpy",
    "pyqtgraph",
    "PySide6>=6.7.0,!=6.9.1",
    "typing_extensions",
]
requires-python = ">=3.9"
authors = [{ name = "Qiujv", email = "qiujv@outlook.com" }]
description = "A simple GUI for monitoring waveforms."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    # "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Qiujv/WaveMonitor"

[project.gui-scripts]
start-wave-monitor = "wave_monitor.gui:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wave_monitor"]

[tool.hatch.version]
path = "src/wave_monitor/__about__.py"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "pytest>=8.4.2",
    "ruff>=0.12.9",
    "viztracer>=1.0.4",
]
